# context-runtime

./: Cargo.toml  README.md
doc/: CTXSYSTEM.md
doc/system/00_overview/: 00_identity.md  01_purpose_and_scope.md  02_architecture_overview.md
doc/system/10_contract-surface/: 00_contract_surface.md
doc/system/20_versioning/: 00_versioning_and_slice_progression.md
doc/system/30_dependencies/: 00_dependencies.md
doc/system/40_validation/: 00_validation_and_proof.md
doc/system/99_appendices/: 00_glossary_and_paths.md
scripts/: smoke_crossing.py
src/: assemble.rs  config.rs  error.rs  gather.rs  http.rs  lib.rs  main.rs  payload.rs  store.rs
tests/: assemble.rs  http.rs
tests/common/: mod.rs
